--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vue2-animate": "^2.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
